--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.raphydaphy.rocksolid'
-version '1.8'
+version '1.9'
 
 apply from: "https://github.com/RockBottomGame/Gradle/raw/master/buildscript.gradle"
 
@@ -8,5 +8,5 @@ processSources {
 }
 
 dependencies {
-     compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '+'
+     compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '0.0.18-136'
  }
