--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,6 @@ repositories {
 }
 
 dependencies {
-     compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '0.0.18-136'
-     compile group: 'com.raphydaphy.rocksolid', name: 'RockSolidAPI', version: '1.9'
+     compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '+'
+     compile group: 'com.raphydaphy.rocksolid', name: 'RockSolidAPI', version: '+'
  }
