--- a/build.gradle
+++ b/build.gradle
@@ -8,5 +8,5 @@ processSources {
 }
 
 dependencies {
-    compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '+'
+    compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '0.2.6-458'
 }
