--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 /build
-/*.launch
 /*.iml
 /*.ipr
 /*.iws
-/Launcher.launch
+/*.launch
 /.idea
-/eclipse
 /rockbottom
 /.gradle
-/bin/*
-/.classpath
-/.settings
-/.project
-/gamedata/*
-/bin/
+/gamedata
