--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-group 'com.raphydaphy.rocksolid'
+group 'com.example.examplemod'
 version '0.1'
 
 apply from: "https://github.com/RockBottomGame/Gradle/raw/master/buildscript.gradle"
@@ -8,5 +8,5 @@ processSources {
 }
 
 dependencies {
-    compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '0.2.6-458'
+    compile group: 'de.ellpeck.rockbottom', name: 'RockBottomAPI', version: '+'
 }
